--- a/sample/src/main/resources/application.conf
+++ b/sample/src/main/resources/application.conf
@@ -13,7 +13,7 @@ database {
   profile = "slick.jdbc.PostgresProfile$"
   driver = org.postgresql.Driver
   databaseName = "umdb"
-  url = "jdbc:postgresql://localhost:5432/umdb"
+  url = "jdbc:postgresql://localhost:5432/sample"
   url = ${?PSQL_URL}
   user = "admin"
   user = ${?PSQL_USER}
