Added a simple test

--- a/sample/src/main/resources/application.conf
+++ b/sample/src/main/resources/application.conf
@@ -12,7 +12,7 @@ http {
 database {
   profile = "slick.jdbc.PostgresProfile$"
   driver = org.postgresql.Driver
-  databaseName = "umdb"
+  databaseName = "sample"
   url = "jdbc:postgresql://localhost:5432/sample"
   url = ${?PSQL_URL}
   user = "admin"
