--- a/sample/src/test/resources/application.conf
+++ b/sample/src/test/resources/application.conf
@@ -3,8 +3,10 @@ akka {
 }
 
 database = {
+  profile = "slick.jdbc.H2Profile$"
   driver = org.h2.Driver
-  url = "jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false"
+  databaseName = "test"
+  url = "jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;INIT=RUNSCRIPT FROM 'classpath:create_all_tables.sql'"
   user = "user"
   password = "password"
 }
