Added repo tests

--- a/sample/src/test/resources/application.conf
+++ b/sample/src/test/resources/application.conf
@@ -6,7 +6,7 @@ database = {
   profile = "slick.jdbc.H2Profile$"
   driver = org.h2.Driver
   databaseName = "test"
-  url = "jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;INIT=RUNSCRIPT FROM 'classpath:create_all_tables.sql'"
+  url = "jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;INIT=RUNSCRIPT FROM 'classpath:create_all_tables.sql'\\;RUNSCRIPT FROM 'classpath:testdata.sql'"
   user = "user"
   password = "password"
 }
